--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
 title: Hello!
-subtitle: I'm Noah Nsangou
+subtitle: I'm Noah Nsangou.
 use-site-title: true
 ---
 
 <p style="text-align: center;"> 
-	My name is Noah Nsangou. I'm a motivated, fast-learning and innovative person studying Computer Science at Williams college. 
-	My diverse interests center around tech in the healthcare space and product usability. Always learning! A budding passion for product design.
+	I'm a motivated, fast-learning and flexible person studying Computer Science at Williams college. 
+	My interests center around bioinformatics and the health tech space, as well as design and usability. I love to solve problems.
 </p>	
 
 <div class="posts-list">
