--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ use-site-title: true
 
 <p style="text-align: center;"> 
 	I'm a motivated, fast-learning and flexible person studying Computer Science at Williams college. 
-	My interests center around bioinformatics and the health tech space, as well as design and usability. I love to solve problems.
+	My interests center around software development in the bioinformatics and health tech spaces, as well as design and usability. 
+	I love to solve problems.
 </p>	
 
 <div class="posts-list">
