--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ use-site-title: true
 
 <p style="text-align: center;"> 
 	I'm a motivated, fast-learning and flexible person studying Computer Science at Williams college. 
-	My interests center around software development in the bioinformatics and health tech spaces, as well as design and usability. 
+	I have broad ranging interests spanning bioinformatics and health tech, as well as in design and usability. 
 	I love to solve problems.
 </p>	
 
