--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Hello!
-subtitle: I'm Noah Nsangou.
+title: Noah Nsangou
+subtitle: Welcome to my website! Here, you'll learn a bit about me, what I like to think about and some of the projects I've worked on. Please reach out if you have any questions! 
 use-site-title: true
 ---
 
