--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ use-site-title: true
 ---
 
 <p style="text-align: center;"> 
-	I'm a motivated, fast-learning and flexible person studying Computer Science at Williams college. 
-	I have broad ranging interests spanning bioinformatics and health tech, as well as in design and usability. 
+	I'm a motivated, fast-learning and flexible thinker studying at Williams College. I am focused in Computer Science, 
+	Data Science and health, with diverse interests spanning software engineering, computational health informatics, design and usability. 
 	I love to solve problems.
 </p>	
 
