--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ use-site-title: true
 
 <p style="text-align: center;"> 
 	I'm a motivated, fast-learning and flexible thinker studying at Williams College. I am focused in Computer Science, 
-	Data Science and health, with diverse interests spanning software engineering, computational health informatics, design and usability. 
+	Data Science and health, with diverse interests spanning software engineering, computational health informatics, and user-centered design. 
 	I love to solve problems.
 </p>	
 
