--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Noah Nsangou
-subtitle: Welcome to my website! Here, you'll learn a bit about me, what I like to think about and some of the projects I've worked on. Please reach out if you have any questions! 
+subtitle: A recent graduate of Williams College with experience in health informatics and biostatistics leveraging knowledge across computer and data science to build new solutions to challenging problems.
 use-site-title: true
 ---
 
